packages/web-client/app/components/card-pay/deposit-workflow/index.css
.deposit-workflow {
  color: var(--boxel-dark);
}


/* Expandable banner */
.deposit-workflow__banner {
  padding-right: var(--boxel-sp);
}

.deposit-workflow__banner ul {
  margin: 0;
  padding-left: 0;
  list-style-position: inside;
}

.deposit-workflow__banner ul li::marker {
  content: '- ';
}

.deposit-workflow__banner p {
  margin: 0;
}

.deposit-workflow__banner small {
  display: block;
  color: var(--boxel-light-600);
  font-size: var(--boxel-font-size-xs);
  line-height: calc(18/11);
  letter-spacing: var(--boxel-lsp-lg);
}

.deposit-workflow__banner strong {
  font-weight: 700;
}

.deposit-workflow__banner a {
  color: currentColor;
  font-weight: 600;
  text-decoration: underline;
  transition: color var(--boxel-transition);
}

.deposit-workflow__banner a:hover {
  color: var(--boxel-light);
}

.deposit-workflow__banner p + p {
  margin-top: var(--boxel-sp);
}

.deposit-workflow__banner p + p:last-of-type {
  margin-top: var(--boxel-sp-lg);
}

